--- a/AvatarSample.Tests/AvatarSample.Tests.csproj
+++ b/AvatarSample.Tests/AvatarSample.Tests.csproj
@@ -23,4 +23,8 @@
 	  <PackageReference Include="Moq" Version="4.18.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AvatarSample\AvatarSample.csproj" />
+  </ItemGroup>
+
 </Project>
